# Project_Maritime_Zero_Trust_Architecture

./: .editorconfig  .env.example  .gitignore  CHECKLIST.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  SECURITY.md  build_complete_project.sh  create_project.sh  docker-compose-giada.yml  docker-compose.yml  docker-compose_Config-Ubuntu-VBox.yml  docker-compose_Config-Win-DockerDesktop.yml  generate_all_files.sh  pyproject.toml
certs/: README.md  ca.key  ca.srl  client_agente.csr  client_agente.key  server.csr
certs/server/: ca.crt  server.crt  server.key
configs/envoy/: envoy.yaml
configs/mongodb/: mongod.conf
configs/mongodb/init-scripts/: 01-init.js  02-seed.js
configs/nftables/: README.md  rules.nft
configs/opa/: config.yaml
configs/opa/policies/: test-policy.rego
configs/snort/: CONFIG_SNORT.md  snort.lua
configs/snort/rules/: CONFIG_SNORT_RULES.md  zta.rules
services/envoy/: Dockerfile
services/nftables/: Dockerfile  entrypoint-nftables.sh  entrypoint.sh
services/opa/: opa-compose.yaml
services/snort/: Dockerfile  entrypoint-snort.sh
